--- a/profile-card-component-main/css/style.css
+++ b/profile-card-component-main/css/style.css
@@ -7,7 +7,6 @@
 
 body{
   background-color: var(--Darkcyan);
-  /* background-image: url(../images/bg-pattern-top.svg) ; */
   margin: 0px;
   font-family: 'Kumbh Sans', sans-serif;
 }
@@ -23,14 +22,16 @@ ul{
  text-align: center;
  max-width: 350px;
  height: 340px;
- position: relative;
- top: 120px;
- left: 470px;
+ position: absolute;
+ bottom: 0;
+ top: 0;
+ right: 0;
+ left: 0;
+ margin: auto;
  border-radius: 10px;
  background-color: white;
  box-shadow: rgba(0, 0, 0, 0.15) 0px 5px 15px 0px;
- /* background-image: url(../images/bg-pattern-bottom.svg); 
- background-image: url(../images/bg-pattern-top.svg);  */
+
 }
 
 .background-container{
@@ -38,7 +39,7 @@ ul{
 
   background-repeat: no-repeat;
   border-radius: 10px 10px 0 0;
-  height: 130px;
+  max-height: 130px;
 }
 
 .background-container img {
